# fazicore-pos

./: .gitignore  CLAUDE.md  codealike.json
.github/workflows/: backend.yml  deploy-web.yml  release-desktop.yml  release-mobile.yml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  nginx.conf  pytest.ini  requirements-test.txt  requirements.txt
backend/app/: main.py
backend/migrations/: env.py
backend/tests/: test_business_logic.py  test_mpesa_reconciliation.py  test_mpesa_webhooks.py  test_security.py
docs/: product-variants.md
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: branch_server.rs  db.rs  lib.rs  sync.rs
mobile/: .gitignore  PLAN.md  README.md  pubspec.yaml
mobile-app/fazistore_pos/: README.md  pubspec.yaml
mobile/integration_test/: auth_test.dart  branches_test.dart  inventory_test.dart  role_admin_test.dart  role_cashier_test.dart  role_manager_test.dart  role_stock_test.dart  sell_checkout_receipt_test.dart  settings_test.dart
mobile/ios/: Podfile
mobile/lib/: app.dart  main.dart  router.dart
mobile/test/: api_error_test.dart  cart_test.dart  widget_test.dart
organization/: .env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
(+329 files in other folders)
